@@ -49,6 +49,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21306: Backport hmac.compare_digest from Python 3. This is part of PEP
+  466.
+
 - Issue #21321: itertools.islice() now releases the reference to the source
   iterator when the slice is exhausted.  Patch by Anton Afanasyev.
 
